--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -2,66 +2,128 @@
 @import "mixins";
 
 .excel__table {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: $header-height + $toolbar-height + $formula-height;
-  overflow-x: auto;
-  padding-bottom: 2px;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: $header-height + $toolbar-height + $formula-height;
+	overflow-x: auto;
+	padding-bottom: 2px;
 
-  .row {
-    display: flex;
-    flex-direction: row;
-    min-height: 20px;
-    height: $row-height;
-  }
+	.row {
+		display: flex;
+		flex-direction: row;
+		min-height: 20px;
+		height: $row-height;
+	}
 
-  .row-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: $info-cell-width;
-    height: 100%;
-    border: 1px solid $border-color;
-    background: #f8f9fa;
-    border-top: none;
-  }
+	.row-info {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		min-width: $info-cell-width;
+		height: 100%;
+		border: 1px solid $border-color;
+		background: #f8f9fa;
+		border-top: none;
+	}
 
-  .row-data {
-    display: flex;
-  }
+	.row-data {
+		display: flex;
+	}
 
-  .column {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f8f9fa;
-    min-width: 40px;
-    width: $cell-width;
-    border: 1px solid $border-color;
-    border-top: 0;
-    border-left: 0;
-    height: 100%;
-  }
+	.column {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background: #f8f9fa;
+		min-width: 40px;
+		width: $cell-width;
+		border: 1px solid $border-color;
+		border-top: 0;
+		border-left: 0;
+		height: 100%;
+	}
 
-  .cell {
-    min-width: 40px;
-    padding: 5px;
-    width: $cell-width;
-    height: 100%;
-    border: 1px solid #e2e3e3;
-    border-top: 0;
-    border-left: 0;
-    color: #111;
-    white-space: nowrap;
-    outline: none;
+	.cell {
+		min-width: 40px;
+		padding: 5px;
+		width: $cell-width;
+		height: 100%;
+		border: 1px solid #e2e3e3;
+		border-top: 0;
+		border-left: 0;
+		color: #111;
+		white-space: nowrap;
+		outline: none;
 
+		&.selected {
+			border: none;
+			outline: 2px solid #3c74ff;
+			z-index: 2;
+		}
+	}
 
-    &.selected {
-      border: none;
-      outline: 2px solid #3c74ff;
-      z-index: 2;
-    }
-  }
+	.col-resize {
+		top: 0;
+		width: 4px;
+		&:hover {
+			cursor: col-resize;
+		}
+	}
 
+	.row-resize {
+		left: 0;
+		height: 4px;
+		&:hover {
+			cursor: row-resize;
+		}
+	}
+
+	.resize {
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		background-color: #3c74ff;
+		opacity: 0;
+		&:hover {
+			opacity: 1;
+		}
+	}
+
+	.line-col {
+		position: absolute;
+		width: 4px;
+		height: 24px;
+		background-color: #3c74ff;
+		top: 0px;
+		left: 15px;
+		z-index: 5;
+		opacity: 0;
+	}
+
+	.line-drop {
+		width: 1px;
+		height: 100vh;
+		margin-left: 1px;
+		background-color: #3c74ff;
+	}
+
+	.line-row {
+		position: absolute;
+		left: 0;
+		z-index: 5;
+		width: 40px;
+		height: 4px;
+		background-color: #3c74ff;
+		opacity: 0;
+	}
+
+	.line-right {
+		width: 100vw;
+		height: 1px;
+		margin-top: 1px;
+		background-color: #3c74ff;
+	}
 }
